sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:2: error: Missing closing brace `}' assumed here
def gnomeSort() {
^AlgGnomeSort:2: error: expected class or object definition
def gnomeSort() {
^AlgGnomeSort:17: error: Missing closing brace `}' assumed here
} 
^